--- a/src/header/style.css
+++ b/src/header/style.css
@@ -2,6 +2,10 @@
     top: 10px;
     padding-left: 10px;
     padding-right: 10px;
+    position: fixed;
+  width: 100%;
+  z-index: 1000;
+  background-color: var(--theme-color);
 }
 
 .menu__button {
